Changes the styling pretty dramatically, adds hover text functionality. Begins to add in a second dataSet.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
   margin: 0;
   padding: 0; }
 .ad {
-  background-color: rgb(0,0,0);
+  background-color: rgb(255,255,255);
+  border: 1px solid black;
   position: relative;
   max-width: 1100px;
   min-width: 720px;
@@ -21,13 +22,132 @@
   position: relative;
   width: 720px;
   height: 480px; }
+h1 { font-weight: 400; }
+h1.title {
+  color: rgb(0,0,0);
+  display: block;
+  font-family: "Raleway";
+  font-size: 30px;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  text-align: right;
+  text-transform: uppercase;
+  z-index: 2; }
+.hover-text {
+  padding-top: 10px;
+  position: absolute; }
+.hover-text h1,
+.hover-text h2 {
+  color: rgb(255,255,255);
+  font-family: "Helvetica Neue";
+  font-weight: 400;
+  text-align: center; }
+.hover-text h1 { font-size: 20px; }
+.hover-text h2 { font-size: 15px; }
 </style>
 
 <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js" type="text/javascript"></script>
 <script src="js/raphael.js" type="text/javascript"></script>
 <script src="js/purchases.js" type="text/javascript"></script>
+<script src="js/refunds.js" type="text/javascript"></script>
 <script type="text/javascript">
+
+var Visualizer = function() {
+  var _this = this;
+
+  this.purchases = window.purchases;
+  this.refunds = window.refunds;
+  this.dataSets = [
+    _this.purchases,
+    _this.refunds,
+  ];
+  this.fullData = _this.purchases.concat( _this.refunds );
+  this.dataByMonth = [];
+
+  this.prepRaphael = function() {
+    _this.paper = new Raphael( $('.svg-wrapper')[0], 720, 480 );
+  }
+
+  this.sortByDate = function( dataSet ) {
+    return dataSet.sort( function( a, b ) {
+      return Date.parse( a['Date'] ) > Date.parse( b['Date'] )
+    });
+  }
+
+  this.prepMonths = function() {
+    var firstMonth, lastMonth;
+    var firsts = [];
+    var lasts = [];
+    for( var i = 0; i < _this.dataSets.length; i++ ) {
+      var dataSet = _this.dataSets[i];
+      dataSet = _this.sortByDate( dataSet );
+      firsts.push( new Date( dataSet[0]['Date'] ) );
+      lasts.push( new Date( dataSet[dataSet.length -1]['Date'] ) );
+    }
+    firsts = _this.sortByDate( firsts );
+    firstDate = firsts[0];
+    lasts = _this.sortByDate( lasts );
+    lastDate = lasts[lasts.length - 1];
+    var numberOfYears = lastDate.getFullYear() - firstDate.getFullYear() + 1;
+    var numberOfMonths = numberOfYears * 12;
+    numberOfMonths = numberOfMonths - firstDate.getMonth();
+    numberOfMonths = numberOfMonths - ( 12 - lastDate.getMonth() );
+    _this.numberOfMonths = numberOfMonths;
+    _this.firstMonth = firstDate.getMonth();
+    _this.firstYear = firstDate.getFullYear();
+  }
+
+  this.sortByMonth = function() {
+    var getMonthInt = function( date ) {
+      var year = date.getFullYear();
+      var month = date.getMonth();
+      var numberOfYears = year - _this.firstYear + 1;
+      var numberOfMonths = numberOfYears * 12;
+      var numberOfMonths = numberOfMonths - _this.firstMonth;
+      var numberOfMonths = numberOfMonths - ( 12 - month );
+      return numberOfMonths;
+    }
+    for( var i = 0; i < _this.fullData.length; i++ ) {
+      var dataItem = _this.fullData[i];
+      var monthInt = getMonthInt( new Date( dataItem["Date"] ) );
+      while( _this.dataByMonth.length <= monthInt ) {
+        _this.dataByMonth.push( [] );
+      }
+      _this.dataByMonth[monthInt].push( dataItem );
+    }
+  }
+
+  this.prepSquares = function() {
+    for( var i = 0; i < dataSets.length; i++ ) {
+
+    }
+
+    for( var i = 0; i < _this.purchasesByMonth.length; i++ ) {
+      purchaseAmountsByMonth.push( [] );
+      var purchasesThisMonth = 0;
+      for( var j = 0; j < _this.purchasesByMonth[i].length; j++ ) {
+        var purchase = _this.purchasesByMonth[i][j];
+        purchasesThisMonth += purchase['Amount'];
+      }
+      purchaseAmountsByMonth[i] = purchasesThisMonth;
+    }
+    purchaseAmountsByMonth.sort();
+    _this.maxAmount = purchaseAmountsByMonth[purchaseAmountsByMonth.length - 1];
+  }
+  
+  this.makeSquares = function() {
+
+  }
+
+
+
+  this.init = function() {
+    _this.prepMonths();
+    _this.sortByMonth();
+  }
+}
 
 var BailoutsVisualization = function() {
   var _this = this;
@@ -38,11 +158,10 @@ var BailoutsVisualization = function() {
 
   this.prep = function() {
     _this.paper = new Raphael( $('.svg-wrapper')[0], 720, 480 );
-    //_this.timeline = _this.paper.path( "M 0 430 L 720 430");
-    //_this.timeline.attr({
-    //  'stroke': 'rgb(255,255,255)',
-    //  'stroke-width': '2'
-    //});
+  }
+
+  this.prettifyAmount = function( amount ) {
+    return "$" + amount / 1000000000 + " billion"
   }
 
   this.sortByDate = function() {
@@ -72,6 +191,18 @@ var BailoutsVisualization = function() {
       }
       _this.purchasesByMonth[numberOfMonths] = _this.purchasesByMonth[numberOfMonths].concat( _this.purchasesByDate[_this.dates[i]] );
     }
+    var y = 450;
+    for( var i = 0; i < _this.purchasesByMonth.length; i++ ) {
+      if( _this.purchasesByMonth[i][0] ) {
+        var date = _this.purchasesByMonth[i][0]["Date"];
+        var d = new Date( date );
+        var prettyDate = d.getMonth() + 1 + "/" + d.getFullYear();
+        _this.paper.text( (i * _this.dateOffset) + (_this.dateOffset / 2), y, prettyDate ).attr({
+          'fill': 'rgb(0,0,0)',
+          'font-weight': 'bold'
+        }).rotate( 90 );          
+      }
+    }
   }
 
   this.plotDates = function() {
@@ -94,7 +225,7 @@ var BailoutsVisualization = function() {
       purchaseAmountsByMonth.push( [] );
       var purchasesThisMonth = 0;
       for( var j = 0; j < _this.purchasesByMonth[i].length; j++ ) {
-        purchase = _this.purchasesByMonth[i][j];
+        var purchase = _this.purchasesByMonth[i][j];
         purchasesThisMonth += purchase['Amount'];
       }
       purchaseAmountsByMonth[i] = purchasesThisMonth;
@@ -105,36 +236,88 @@ var BailoutsVisualization = function() {
 
   this.buildDateSquares = function() {
     var x, y, h;
-    var w = _this.dateOffset - 5;
+    var w = _this.dateOffset / 2;
     for( var i = 0; i < _this.purchasesByMonth.length; i++ ) {
       var purchasesInMonth = _this.purchasesByMonth[i];
       var heightToPoint = 0;
       for( var j = 0; j < purchasesInMonth.length; j++ ) {
-        h = Math.floor( ( purchasesInMonth[j]['Amount'] * 380 ) / _this.maxAmount );
-        heightToPoint += h + 2;
+        var j = j;
+        var purchase = purchasesInMonth[j];
+        h = Math.floor( ( purchase['Amount'] * 300 ) / _this.maxAmount );
+        if( h == 0 ) {
+          heightToPoint += h;
+        } else {
+          heightToPoint += h + 2;
+        }
         x = i * _this.dateOffset + 3;
         y = Math.abs( (heightToPoint ) - 430 );
-        var purchaseSquare = _this.paper.rect( x, y, w, h );
+        var purchaseSquare = _this.paper.rect( x, y , w, h );
         purchaseSquare.attr({
-          'fill': 'rgb(255,255,255)',
+          'fill': 'rgb(255,0,0)',
           'stroke': 'none'
         });
-        purchaseSquare.mouseover( _this.onPurchaseSquareMouseover );
+        purchaseSquare.data({
+          'date':   purchase['Date'],
+          'entity': purchase['Entity'],
+          'amount': purchase['Amount'],
+        });
+        purchaseSquare.mouseover( function( event ) {
+          _this.onPurchaseSquareMouseover( this );
+        });
         purchaseSquare.mouseout( _this.onPurchaseSquareMouseout );
       }
     }
   }
 
-  this.onPurchaseSquareMouseover = function() {
-    this.animate({
-      'fill': 'rgb(100,100,100)'
-    }, 100 );
-  },
-
   this.onPurchaseSquareMouseout = function() {
     this.animate({
-      'fill': 'rgb(255,255,255)'
+      'fill': 'rgb(255,0,0)'
     }, 100 );
+    _this.hoverRect.remove();
+    $('.hover-text').remove();
+  }
+
+  this.onPurchaseSquareMouseover = function( square ) {
+    var rh = 70;
+    var rw = 300;
+    if( square.getBBox().x > 720 / 2 ) {
+      var rx = square.getBBox().x - rw - 3;
+    } else {
+      var rx = square.getBBox().x + _this.dateOffset;
+    }
+    if( square.getBBox().y > 360 ) {
+      var ry = square.getBBox().y - rh;
+    } else {
+      var ry = square.getBBox().y
+    }
+    _this.hoverRect = _this.paper.rect( rx, ry, rw, rh ).attr( 'fill', 'rgb(255,0,0)' );
+    $('.svg-wrapper').trigger( 'hoverRect', [{
+      'date': square.data( 'date' ),
+      'entity': square.data( 'entity' ),
+      'amount': square.data( 'amount' ),
+      'x': rx,
+      'y': ry,
+      'rw': rw,
+      'rh': rh
+    }]);
+    square.animate({
+      'fill': 'rgb(100,0,0)'
+    }, 100 );
+  }
+
+  this.makeTextOnHover = function( event, extraData ) {
+    var svgWrapper = $('.svg-wrapper');
+    svgWrapper.append( '<div class="hover-text"></div>' );
+    var hoverText = svgWrapper.find( '.hover-text' );
+    hoverText.css({
+      'position': 'absolute',
+      'width': extraData['rw'] + "px",
+      'height': extraData['rh'] + "px",
+      'top': extraData['y'] + "px",
+      'left': extraData['x'] + "px"
+    });
+    hoverText.position( 'top', extraData['ry'] );
+    $('.svg-wrapper').find('.hover-text').append( '<h1>' + extraData['entity'] + '</h1><h2>' + _this.prettifyAmount( extraData['amount'] ) + '</h2>' );
   }
 
   this.init = function() {
@@ -144,18 +327,27 @@ var BailoutsVisualization = function() {
     _this.sortByMonth();
     _this.prepDateSquares();
     _this.buildDateSquares();
+    $('.svg-wrapper').on( 'hoverRect', function( event, extraData ) {
+      _this.makeTextOnHover( event, extraData );
+    });
   } 
 }
 
 $(document).ready( function() {
   var visualization = new BailoutsVisualization();
   visualization.init();
+
+  var v = new Visualizer();
+  v.init();
+
 });
 
 </script>
 
 <div class="ad">
-  <div class="svg-wrapper"></div>
+  <div class="svg-wrapper">
+    <h1 class="title">Bailouts over $4 million by month </h1>
+  </div>
 </div>
 </body>
 </html>
