--- a/public/index3.html
+++ b/public/index3.html
@@ -30,6 +30,11 @@ header#primary-header h1 { font-size: 50px; }
   height: 100%;
 }
 </style>
+<script src="js/data.js" type="text/javascript"></script>
+<script type="text/javascript">
+
+
+</script>
 
 <div id="ad">
   <header id="primary-header">
